fix for the header to make it work better on small page (#32394)

--- a/themes/src/main/resources/theme/keycloak.v2/login/resources/css/styles.css
+++ b/themes/src/main/resources/theme/keycloak.v2/login/resources/css/styles.css
@@ -1,13 +1,7 @@
 .pf-v5-c-login__container {
-    grid-template-areas: "main";
     grid-template-columns: 34rem;
-}
-
-#kc-header-wrapper {
-    padding: 62px 10px 20px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    grid-template-areas: "header"
+                         "main"
 }
 
 .login-pf body {
@@ -82,6 +76,7 @@ div.kc-logo-text span {
     text-transform: uppercase;
     letter-spacing: 3px;
     line-height: 1.2em;
-    padding: 62px 10px 20px;
     white-space: normal;
+    color: var(--pf-v5-global--Color--light-100) !important;
+    text-align: center;
 }
